--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 mediapipe/provisioning_profile.mobileprovision
+.bazel
+bazel-*
 bazel-bin
 bazel-genfiles
 bazel-mediapipe-ioss
@@ -6,3 +8,4 @@ bazel-out
 bazel-testlogs
 mediapipe/MediaPipe.xcodeproj
 mediapipe/MediaPipe.tulsiproj/*.tulsiconf-user
+
